# django-tratech

./: .gitignore  README.md  db.sqlite3  pyproject.toml
apps/accounts/: models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/courses/: models.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_alter_course_name.py
apps/lessons/: models.py
apps/modules/: models.py
apps/modules/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: settings.py
tratech/apps/accounts/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
tratech/apps/accounts/migrations/: 0002_create_social_accounts.py  0003_user_image.py  0004_user_name.py  0005_alter_user_name.py
tratech/apps/courses/: models.py  serializers.py  urls.py  views.py
tratech/apps/courses/migrations/: 0003_course_published.py  0004_course_course_info.py  0005_course_slug.py
tratech/apps/coursework/: apps.py  urls.py  views.py
tratech/apps/coursework/migrations/: 0001_initial.py
tratech/apps/coursework/models/: __init__.py  course.py  (+2 more)
tratech/apps/enrollments/: models.py
tratech/apps/lessons/: models.py  serializers.py  urls.py  views.py
tratech/apps/modules/: apps.py  models.py  serializers.py  urls.py  views.py
tratech/config/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
tratech/core/: urls.py
tratech/requirements/: structure.txt
tratech/scripts/: generate_slug.py
tratech/user_auth/: models.py  serializer.py  views.py
tratech/user_auth/migrations/: 0001_create_groups.py
user_auth/: urls.py
(+12 files in other folders)
